kubernetes/apps/dev/forgejo/external/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "git"
  labels:
    name: forgejo
spec:
  hostnames:
    - git.aresu.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: forgejo
      matches:
        - path:
            type: PathPrefix
            value: /
